added firestore backend, small fixes

--- a/frontend/src/login.scss
+++ b/frontend/src/login.scss
@@ -64,7 +64,7 @@ $bp-desktop-22: 1680px;
 
 body {
   font-family: $font-family;
-  color: $color-white;
+//   color: $color-white;
 }
 
 .sections {
