--- a/frontend/src/SubmissionForm/SubmissionForm.module.scss
+++ b/frontend/src/SubmissionForm/SubmissionForm.module.scss
@@ -3,3 +3,10 @@
     width: 70%;
     margin: 0 auto;
 }
+
+// turn off number input spinner
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
