--- a/frontend/src/UserHome/user-home.scss
+++ b/frontend/src/UserHome/user-home.scss
@@ -55,3 +55,22 @@ $height-post: 600px;
     text-align: center;
 }
 
+.items {
+    width: 100%;
+    height: 100%;
+    color: #555;
+    margin-top: 5%;
+    background-color: #FFF;
+}
+
+.scroller {
+    display: inline-block;
+    margin: 0 auto;
+    height: 300px;
+    width: 100%;
+    overflow: auto;
+}
+
+.item {
+    margin: 30px 0;
+}
