add admin support

--- a/frontend/src/nav-bar/nav-bar.scss
+++ b/frontend/src/nav-bar/nav-bar.scss
@@ -23,6 +23,7 @@ $height-post: 600px;
     justify-content: flex-start;
     align-items: center;
     padding-left: 20px;
+    visibility: hidden;
 }
 
 .header-logo {
