navbar not showing options menu

--- a/frontend/src/home/home.scss
+++ b/frontend/src/home/home.scss
@@ -43,7 +43,7 @@ $height-post: 600px;
 }
 
 .headers + .content-wrapper {
-    padding-top: $height-header;
+    padding-top: 110px;
 }
 
 .content-wrapper {
