--- a/frontend/src/UserHome/user-home.scss
+++ b/frontend/src/UserHome/user-home.scss
@@ -43,7 +43,7 @@ $height-post: 600px;
 }
 
 .headers + .content-wrapper {
-    padding-top: $height-header;
+    padding-top: 100px;
 }
 
 .content-wrapper {
