--- a/frontend/src/UserHome/user-home.scss
+++ b/frontend/src/UserHome/user-home.scss
@@ -73,3 +73,14 @@ $height-post: 600px;
 .item {
     margin: 30px 0;
 }
+
+.submissionBtn {
+    background-color: #031c42;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
