Added list of found items in admin

--- a/frontend/src/item-details.scss
+++ b/frontend/src/item-details.scss
@@ -71,6 +71,8 @@ $bp-desktop-22: 1680px;
 }
 
 .list-title {
+    font-weight: 700;
     color: $color-black;
     font-size: 24px;
+    padding-top: 10px;
 }
