--- a/frontend/src/admin-homepage.scss
+++ b/frontend/src/admin-homepage.scss
@@ -133,7 +133,7 @@ body {
     padding-right: 20px;
 }
 
-.headers + .items {
+.headers + .title {
     padding-top: $height-header;
 }
 
@@ -170,8 +170,27 @@ body {
     padding-top: $height-header;
 }
 
-.sidebar + .items {
-    padding-top: 10%;
+.sidebar + .title {
+    padding-top: 5%;
+}
+
+.submit-button {
+    width: 50%;
+}
+
+.title {
+    font-size: $font-size;
+    font-weight: $font-weight;    
+    display: grid;
+    grid-template-rows: 50% 50%;
+    @include for-size(desktop-up) {
+        padding-top: 25px;
+        padding-left: 60px;
+    }
+    @include for-size(desktop-22-up) {
+        padding-top: 25px;
+        padding-left: 80px;
+    }
 }
 
 .items {
@@ -182,7 +201,7 @@ body {
         height: $height-main;
     }
     font-size: 15px;
-    background-color: $color-off-white;
+    
 }
 
 .checkbox {
@@ -227,7 +246,6 @@ body {
 .containers {
     height: 100%;
     width: 100%;
-    background-color: $color-off-white;
     @include for-size(desktop-up) {
         padding-top: 25px;
         padding-left: 60px;
@@ -241,33 +259,7 @@ body {
 
 }
 
-.grid {
-    display: flex !important;
-    justify-content: center !important;
-    align-items: center !important;
-}
 
-.card {
-    @include for-size(desktop-up) {
-        margin-left: 15px !important;
-        margin-top: 15px !important;
-        padding: 10px 10px 10px 10px !important;
-    }
-    @include for-size(desktop-22-up) {
-        margin-left: 75px !important;
-        margin-top: 50px !important;
-        padding: 25px 25px 25px 25px !important;
-    }
-
-    color: $color-black;
-    transition: 0.5s ease !important;
-    z-index: 0 !important;
-}
-
-.card:hover {
-    cursor: pointer;
-    transform: scale(1.1);
-}
 
 .prevnext {
     display: grid;
@@ -312,5 +304,6 @@ body {
 }
 
 .item-list {
+    margin-top: 40px !important;
     width: 90%;
 }
