--- a/frontend/src/adminPage/admin-homepage.scss
+++ b/frontend/src/adminPage/admin-homepage.scss
@@ -31,11 +31,9 @@ $font-family: 'Quicksand', sans-serif;
 $font-home: 'Source Code Pro';
 $font-icon: 'Font Awesome 5 Free';
 $font-weight: 700;
-$font-size: 24px;
+$font-size: 22px;
 $font-size-sm: 12px;
-$font-size-sm2: 18px;
-$font-size-movie-title: 20px;
-$font-size-modal-text: 20px;
+$font-size-sm2: 1px;
 $font-size-med: 28px;
 $font-size-lg: 36px;
 $font-size-xl: 60px;
@@ -149,12 +147,6 @@ body {
 }
 
 .items {
-    @include for-size(desktop-up) {
-        height: $height-main-desktop;
-    }
-    @include for-size(desktop-22-up) {
-        height: $height-main;
-    }
     font-size: 15px;
     
 }
@@ -214,7 +206,21 @@ body {
 
 }
 
+.containers-header {
+    display: grid;
+    grid-template-columns: 40% 60%;
+}
 
+.containers-list {
+    margin-top: 15px;
+}
+#search-items, #search-items-2 {
+    max-width: 40% !important;
+    max-height: 100% !important;
+    align-self: center;
+    border-radius: 40px !important;
+    font-size: 15px !important;
+}
 
 .prevnext {
     display: grid;
@@ -258,6 +264,12 @@ body {
     margin-right: 1.5%;
 }
 
+.list-title {
+    margin: 0 0 0 0;
+    align-self: center;
+    padding-top: 0px !important;
+    font-size: $font-size !important;
+}
 .item-list {
     margin-top: 40px !important;
     width: 90%;
